@@ -1,7 +1,7 @@
 Package: sfsmisc
 Title: Utilities from "Seminar fuer Statistik" ETH Zurich
 Version: 1.0-29
-Date: 2015-11-..
+Date: 2015-12-10
 Author: Martin Maechler et al.
 Maintainer: Martin Maechler <maechler@stat.math.ethz.ch>
 Description: Useful utilities ['goodies'] from Seminar fuer Statistik ETH
